# CS7643-Group-Proj

./: .gitignore  README.md  environment.yml  pyproject.toml
Maskformer/: config_maskformer.yml  flood_maskformer.py  runner.py  test.py
notebooks/: data_exploration.ipynb  data_inspection.ipynb  visualization.ipynb
outputs/transformers_transfer_prithvi/lightning_logs/version_0/: events.out.tfevents.1763672474.VULPES-VULPES.89833.0  metrics.csv
outputs/transformers_transfer_prithvi/lightning_logs/version_1/: events.out.tfevents.1763672789.VULPES-VULPES.93707.0  hparams.yaml  metrics.csv
outputs/transformers_transfer_prithvi/lightning_logs/version_10/: events.out.tfevents.1763909558.VULPES-VULPES.65003.0  hparams.yaml
outputs/transformers_transfer_prithvi/lightning_logs/version_11/: events.out.tfevents.1763910200.VULPES-VULPES.66686.0  hparams.yaml
outputs/transformers_transfer_prithvi/lightning_logs/version_2/: events.out.tfevents.1763672856.VULPES-VULPES.94430.0  events.out.tfevents.1764619176.atl1-1-02-010-32-0.pace.gatech.edu.1387481.0  hparams.yaml
scripts/: slurm_unet.sh  sync_full.sh  sync_local.sh  sync_partial.sh  unet_trial.sh
src/ViT/: config_segformer.yml  flood_segformer.py  seg_batch_runner.sh  seg_runner.py
src/configs/: config.yaml
src/data/: __init__.py  augmentations.py  io.py  loaders.py  s1augmentations.py  s1hand.py  s1weak.py  s2augmentations.py  s2hand.py  s2weak.py
src/data_s2_old/: sen1floods11.py  sen1floods11data.py
src/feature_comp/: cka_comp.py  comp_readme.md
src/maskformer/: batch_runner.sh  config_maskformer.yml  flood_maskformer.py  runner.py
src/models/: build_sample_model.ipynb  build_sample_model.py
src/training/ViT/: config_maskformer.yml  config_segformer.yml  flood_maskformer.py  flood_segformer.py  seg_runner.py
src/training/maskformer/: batch_runner.sh  config_maskformer.yml  flood_maskformer.py  test.py
src/training/prithvi/: config.yaml  eval.py  hparam_validation.py  runner.py  runner.sh  runner_array.sh  sen1floods11.py  train.py  train_hand.py  train_weak.py
src/training/transformers_transfer_prithvi/: sen1floods11.py  train.py  train_hand.py  train_weak.py
src/training/unet/: config_unet.yml  config_unet_s1hand.yml  config_unet_s1weak.yml  loss.py  metrics.py  model.py  runner.py  train_unet.py  trainer.py  unet_s1weak.slurm  viz.py
src/viz/: segformer_visualization.py  unet_visualization.py  visualization.py  viz_readme.md
(+37 files in other folders)
