[project]
name = "cs7643-group-proj"
version = "0.1.0"
description = "ML semantic segmentation of satellite imagery for flooding."
readme = "README.md"
requires-python = ">=3.10.18"
dependencies = [
    "albumentations>=1.4.6",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "numpy>=1.26.4",
    "rasterio>=1.4.3",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "terratorch>=1.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN101", # Missing type annotation for self in method
    "COM",    # flake8-commas
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D406",   # Section name should end with a newline
    "D407",   # Missing dashed underline after section
    "FBT",    # flake8-boolean-trap
    "G004",   # Logging statement uses f-string
    # "PD901",  # df is a bad variable name. Be kinder to your future self.
    "RET504", # Unnecessary assignment before return statement (I think this improves debug as a breakpoint)
    "RET505", # Unnecessary `elif` after `return` statement  (I think this improves readability)
    "RET506", # Unnecessary `else` after `return` statement  (I think this improves readability)
    "T20",    # flake8-print
    "TD003",  # Missing issue link on the line following this TODO  (I don't have an issue system)
]
src = ["src"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101", # Use of assert detected
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pyright]
typeCheckingMode = "strict"

reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
